--- a/문제풀이.md
+++ b/문제풀이.md
@@ -34,3 +34,8 @@ public static void main(String[] args) {
 
 ```
 
+Scanner 입력장치 출력 후 
+
+문자열을 입력받을수 있게 변수로 작성 후 문자로 바꿔주기 
+
+J U N G O L  배열 초기화를 작성시키고 반복문을 작성 > 
